[add] Section about GUIs

--- a/dev_course.org
+++ b/dev_course.org
@@ -171,6 +171,11 @@ __pycache__/
 *.pyc
 #+END_SRC
 
+** Инструменты
+- консоль!
+- графическая морда
+** Морды
+- git GUI
 * Учёт задач
 ** Мотивация
 Проблема:
