--- a/dev_course.org
+++ b/dev_course.org
@@ -17,7 +17,7 @@
 #+OPTIONS: email:nil f:t inline:t num:t p:nil pri:nil prop:nil stat:t tags:t
 #+OPTIONS: tasks:t tex:t timestamp:t title:t toc:t todo:t |:t
 ** latex (beamer)
-#+OPTIONS: H:2
+#+OPTIONS: H:3
 #+LATEX_CLASS: beamer
 #+LaTeX_CLASS_OPTIONS: [bigger]
 #+COLUMNS: %45ITEM %10BEAMER_env(Env) %10BEAMER_act(Act) %4BEAMER_col(Col) %8BEAMER_opt(Opt)
@@ -67,118 +67,8 @@
 - все утверждения нужно поддерживать живой демонстрацией
 - в то же время материал должен быть самодостаточным
 
-* Управление версиями
-** О чём речь?
-Есть папка с файлами.
 
-Вы поменяли файлы -- вот новая версия.
-
-** Проблемы
-Если что-то испортил:
-- сложно понять, когда и в каком файле
-- сложно вернуть как было
-
-Можно делать резервные копии вручную:
-- много ручной работы
-- сложно избежать бардака (нужна самодисциплина)
-- файлы будут дублироваться и займут много места
-
-** Решение
-Система управления версиями (version control system, VCS):
-- делает за вас резервные копии файлов -- меньше ручной работы
-- хранит не целые файлы, а только изменения -- нет дублирования
-- ведёт историю изменений -- легко найти, где поломалось
-
-Можно записывать изменения настолько подробно, насколько хочется (см. atomic commits).
-
-Но нужно осваивать.
-
-** Совместная работа
-Нескольким людям надо менять файлы в одном проекте.
-
-Если файлы не зависят друг от друга, проблем нет.
-
-Но когда проект разрастается, одному сложно с ним управиться. Обычно он разбивается на файлы, и 
-
-Проблема:
-- если вместе править файлы в одной папке (сетевой) -- легко запутаться
-- если каждый правит у себя, и потом сливают разные версии -- это сложно, трудоёмко, легко ошибиться
-
-Решение:
-- сделать центральную ("ничью") версию папки: в ней актуальная версия
-- каждый правит у себя 
-- каждый сам отвечает за актуальность своей версии
-- инструмент упрощает слив разных версий
-
-** Термины
-- Репозиторий: папка с файлами + история изменений.
-- Центральный репозиторий: папка, с которой синхронизируются все, кто работает над проектом.
-- Коммит: 
-  1) слепок папки на какой-то момент времени
-  2) акт создания слепка.
-- Ветка: цепочка последовательных коммитов
-- Слияние веток (мердж): 
-
-Образ: направленный ациклический граф.
-
-Картинка: граф проекта.
-
-** git
-- распределённая
-- основанная на слепках файлов, не на различиях
-
-Как установить:
-1. скачать [[https://git-scm.com/download/win][последнюю версию]]
-2. установить (без админских прав)
-
-Как работать:
-- в консоли: git bash / git cmd
-- в приложении
-
-** Как работать локально
-1. создать репозиторий: ~$ git init~
-2. поработать с проектом: изменятся файлы
-3. добавить изменённые файлы: ~$ git add <path_to_file>~
-4. закоммитить изменения: ~$ git commit~
-   !!! обязательно написать пояснение к коммиту !!!
-
-** Как работать совместно:
-1. создать репозиторий на сервере: в интерфейсе на gitlab.com
-2. клонировать его: ~git clone <url>~
-3. поработать с проектом: изменятся файлы
-4. добавить изменённые файлы: ~$ git add <path_to_file>~
-5. закоммитить изменения: ~$ git commit~
-6. отправить на сервер: ~$ git push origin master~ 
-
-** Как *правильно* работать совместно:
-1. создать ветку под отдельную функцию
-2. поработать с проектом
-3. добавить изменённые файлы и закоммитить
-4. повторить 2-3, пока функция не создана
-5. смерджить ветку с мастером
-6. отправить на сервер
-
-Полезно:
-- утром перед началом работы мерджить в свою ветку накопившиеся изменения из мастера (ваши коллеги тоже работают!)
-
-** Фишки git
-*** какие файлы учитывать
-~.git/info/exclude~:
-#+BEGIN_SRC
-__cache__/
-__pycache__/
-.ipynb_checkpoints/
-*.pyc
-#+END_SRC
-
-** Инструменты
-- консоль!
-- графическая морда
-** Морды
-- git GUI
-- [[https://www.youtube.com/watch?v=hkBVAi3oKvo][ungit]]
-
-* Учёт задач
+* Учёт задач                                                       :noexport:
 ** Мотивация
 Проблема:
 - не знаю, чем занимаюсь
@@ -194,17 +84,19 @@ __pycache__/
 ** gitlab
 Коротко: репозиторий + трекер задач
 
-* Тестирование и документация
+* Тестирование и документация                                      :noexport:
 ** Мотивация
 ** Виды тестов
 ** Юнит-тесты (модульные тесты)
 *** docstring
 *** pytest
 
-* Структурирование программ
+* Структурирование программ                                        :noexport:
 ** Зачем
 - снизить сложность = число зависимостей между сущностями
 - позволить нескольким людям работать над частями независимо
+** Главный императив разработки
+Сдерживать рост сложности (с) МакКоннел. Совершенный код
 ** Метафора программы
 Зачем нужна метафора программы:
 - для полезных аналогий (см. метод фокальных объекотв)
@@ -216,7 +108,7 @@ __pycache__/
 - здание
 
 
-* Инструменты
+* Инструменты                                                      :noexport:
 ** jupyter notebook
 Плюсы:
 - простота и интерактивность
