[fix] Few typos

--- a/01_version_control.org
+++ b/01_version_control.org
@@ -230,7 +230,7 @@ Date:   Thu Apr 5 12:31:19 2018 +0300
     Very important change
 #+END_SRC
 
-** Как несколькоим людям работать над одним проектом
+** Как нескольким людям работать над одним проектом
 *** Центральный сервер
 **** Центральный сервер
 :PROPERTIES:
@@ -245,7 +245,7 @@ Date:   Thu Apr 5 12:31:19 2018 +0300
 :END:
 - github.com
 - *gitlab.com*
-- sourceforge.org
+- sourceforge.net
 - ...
 - внутренний сервер
 
